# project

./: README.md  pyproject.toml
data/: names.txt
src/: main.py
