[tool.poetry]
name = "tasks-lesson9-2"
version = "0.1.0"
description = ""
authors = ["Muharbi <you@example.com>"]
readme = "README.md"
packages = [{include = "tasks_lesson9"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
